fixed overflow issues

--- a/seismic-web/src/styles/Admin.scss
+++ b/seismic-web/src/styles/Admin.scss
@@ -6,14 +6,16 @@
 
   > section {
     height: 100%;
+    overflow: hidden;
   }
 
   section.main {
-    width: calc(70% - 40px);
+    //width: calc(70% - 40px);
+    width: 70%;
     align-items: flex-start;
     justify-content: flex-start;
-    height: calc(100vh - 100px);
-    padding: 20px;
+    //height: calc(100vh - 100px);
+    // padding: 20px;
   }
 }
 
