--- a/seismic-web/src/styles/Chat.scss
+++ b/seismic-web/src/styles/Chat.scss
@@ -1,12 +1,12 @@
 main {
   padding: 10px;
-  height: 80vh;
+  height: 90vh;
   margin: 0;
   overflow-y: scroll;
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100%;
+  // height: 100%;
 
   ul,
   li {
