--- a/seismic-web/src/styles/Header.scss
+++ b/seismic-web/src/styles/Header.scss
@@ -7,7 +7,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px;
+  padding: 0 10px;
   box-sizing: border-box;
   box-shadow: rgb(50 50 93 / 25%) 0px 50px 100px -20px,
     rgb(0 0 0 / 30%) 0px 30px 60px -30px;
